# XtacPoisoning

./: .gitignore  README.md  XtacPoisoning.sln
CalcHashes/: CalcHashes.vcxproj  Main.cpp
CreateShellcode/: main.py  pyproject.toml  shellcode.h  shellcode_rvas.txt
MarkerLibrary32/: MarkerLibrary32.vcxproj  MarkerLibrary32.vcxproj.filters  Native.asm
MarkerLibrary64/: MarkerLibrary64.vcxproj  Native.asm
NTFSTimestampsExperiment/: Main.cpp  NTFSTimestampsExperiment.vcxproj  NTFSTimestampsExperiment.vcxproj.filters
PoisonXtac/: CalcShellcode.h  Main.cpp  MsgBoxShellcode.h  PoisonXtac.vcxproj  PoisonXtac.vcxproj.filters  RevShellcode.h  shellcode.h
ShellcodeTemplate/: HelperMacros.h  Main.c  MiniWin32Api.c  MiniWin32Api.h  NtFunctions.c  NtFunctions.h  NtStructs.h  ShellcodeTemplate.vcxproj  ShellcodeTemplate.vcxproj.filters  function_order.txt
TestShellcode/: Main.cpp  TestShellcode.vcxproj
XtacTranslateTool/: Main.cpp  XtacTranslateTool.vcxproj  XtacTranslateTool.vcxproj.filters  marker_library32.h  marker_library64.h
